// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rum client dashboard queries fetches client metrics 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
    ],
  },
  "body": Object {
    "aggs": Object {
      "backEnd": Object {
        "percentiles": Object {
          "field": "transaction.marks.agent.timeToFirstByte",
          "hdr": Object {
            "number_of_significant_value_digits": 3,
          },
          "percents": Array [
            50,
          ],
        },
      },
      "domInteractive": Object {
        "percentiles": Object {
          "field": "transaction.marks.agent.domInteractive",
          "hdr": Object {
            "number_of_significant_value_digits": 3,
          },
          "percents": Array [
            50,
          ],
        },
      },
      "pageViews": Object {
        "value_count": Object {
          "field": "transaction.type",
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "transaction.type": "page-load",
            },
          },
          Object {
            "exists": Object {
              "field": "transaction.marks.navigationTiming.fetchStart",
            },
          },
          Object {
            "term": Object {
              "my.custom.ui.filter": "foo-bar",
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`rum client dashboard queries fetches page load distribution 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
    ],
  },
  "body": Object {
    "aggs": Object {
      "durPercentiles": Object {
        "percentiles": Object {
          "field": "transaction.duration.us",
          "hdr": Object {
            "number_of_significant_value_digits": 3,
          },
          "percents": Array [
            50,
            75,
            90,
            95,
            99,
          ],
        },
      },
      "minDuration": Object {
        "min": Object {
          "field": "transaction.duration.us",
          "missing": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "transaction.type": "page-load",
            },
          },
          Object {
            "exists": Object {
              "field": "transaction.marks.navigationTiming.fetchStart",
            },
          },
          Object {
            "term": Object {
              "my.custom.ui.filter": "foo-bar",
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`rum client dashboard queries fetches page view trends 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
    ],
  },
  "body": Object {
    "aggs": Object {
      "pageViews": Object {
        "aggs": undefined,
        "auto_date_histogram": Object {
          "buckets": 50,
          "field": "@timestamp",
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "transaction.type": "page-load",
            },
          },
          Object {
            "exists": Object {
              "field": "transaction.marks.navigationTiming.fetchStart",
            },
          },
          Object {
            "term": Object {
              "my.custom.ui.filter": "foo-bar",
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`rum client dashboard queries fetches rum services 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
    ],
  },
  "body": Object {
    "aggs": Object {
      "services": Object {
        "terms": Object {
          "field": "service.name",
          "size": 1000,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "transaction.type": "page-load",
            },
          },
          Object {
            "exists": Object {
              "field": "transaction.marks.navigationTiming.fetchStart",
            },
          },
          Object {
            "term": Object {
              "my.custom.ui.filter": "foo-bar",
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;
